<?xml version="1.0" encoding="utf-8"?>
<!--suppress DeprecatedClassUsageInspection -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_official_links"
        android:layout="@layout/category_text" >
        <Preference
            android:key="pref_official_links_donate"
            android:title="@string/pref_official_links_donate_title"
            android:summary="@string/pref_official_links_donate_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://morphe.software/donate" />
        </Preference>
        <Preference
            android:key="pref_official_links_website"
            android:title="@string/pref_official_links_website_title"
            android:summary="@string/pref_official_links_website_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://morphe.software" />
        </Preference>
        <Preference
            android:key="pref_official_links_github"
            android:title="@string/pref_official_links_github_title"
            android:summary="@string/pref_official_links_github_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/MorpheApp/PotHelper" />
        </Preference>
        <Preference
            android:key="pref_official_links_reddit"
            android:title="@string/pref_official_links_reddit_title"
            android:summary="@string/pref_official_links_reddit_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.reddit.com/r/MorpheApp" />
        </Preference>
        <!-- Not yet available in the Crowdin.
        <Preference
            android:key="pref_official_links_translate"
            android:title="@string/pref_official_links_translate_title"
            android:summary="@string/pref_official_links_translate_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://morphe.software/translate" />
        </Preference>
        -->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_credits"
        android:layout="@layout/category_text" >
        <Preference
            android:key="pref_credits_morphe"
            android:title="@string/pref_credits_morphe_title"
            android:summary="@string/pref_credits_morphe_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/MorpheApp/PotHelper/graphs/contributors?all=1" />
        </Preference>
        <Preference
            android:key="pref_credits_microg"
            android:title="@string/pref_credits_microg_title"
            android:summary="@string/pref_credits_microg_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/microg/GmsCore/graphs/contributors?all=1" />
        </Preference>
        <Preference
            android:key="pref_credits_microg_re"
            android:title="@string/pref_credits_microg_re_title"
            android:summary="@string/pref_credits_microg_re_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/MorpheApp/MicroG-RE/graphs/contributors?all=1" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_project_license"
        android:layout="@layout/category_text" >
        <Preference
            android:key="pref_project_license_pot_helper"
            android:title="@string/pref_project_license_pot_helper_title"
            android:summary="@string/pref_project_license_pot_helper_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_third_party_license"
        android:layout="@layout/category_text" >
        <Preference
            android:key="pref_third_party_license_nano_pb"
            android:title="@string/pref_third_party_license_nano_pb_title"
            android:summary="@string/pref_third_party_license_nano_pb_summary" />
        <Preference
            android:key="pref_third_party_license_safe_parcel"
            android:title="@string/pref_third_party_license_safe_parcel_title"
            android:summary="@string/pref_third_party_license_safe_parcel_summary" />
    </PreferenceCategory>

</PreferenceScreen>